--- a/women_care.html
+++ b/women_care.html
@@ -45,7 +45,7 @@
                     <a href="#"> Buy Medicines <i class="fa-solid fa-caret-down"></i> </a>
                     <ul class="dropdown_menu">
                         <li><a href="baby_care.html">Baby Care</a></li>
-                        <li><a href="#">Women Care</a></li>
+                        <li><a href="women_care.html">Women Care</a></li>
                         <li class="hover-me">
                             <a href="#">Personal Care <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu">
@@ -81,97 +81,97 @@
 
     <div id="womenCareProducts">
         <div class="box box1">
-            <div class="box-img" style="background-image: url(/images/BabyCare/wetwipes.webp)"></div>
-            <p> Little's Soft Cleansing Baby Wipes Lid, 160 (2*80) Units</p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 220 </p>
+            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreepads.webp)"></div>
+            <p> Stayfree Secure Pads with Wings XL, 20 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 116 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box2">
-            <div class="box-img" style="background-image: url(/images/BabyCare/prampersDiaperswebp.webp)"></div>
-            <p> Pampers Premium Care Diaper Pants XXL, 30 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 993.30 </p>
+            <div class="box-img" style="background-image: url(/images/WomenCare/vwashhygiene.webp)"></div>
+            <p> VWash Plus Expert Intimate Hygiene Wash, 100 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 180 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box3">
-            <div class="box-img" style="background-image: url(/images/BabyCare/bodyWash.webp)"></div>
-            <p> Chicco Baby Moments Body Wash and Shampoo, 200 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 237.2 </p>
+            <div class="box-img" style="background-image: url(/images/WomenCare/apollopharmacykit.webp)"></div>
+            <p> Apollo Pharmacy LH Ovulation 5 Day Test Kit </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 427.5 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box4">
-            <div class="box-img" style="background-image: url(/images/BabyCare/mamaearthShampoo.webp)"></div>
-            <p> Mamaearth Milky Soft Shampoo For Babies, 5Yrs </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 404.10 </p>
+            <div class="box-img" style="background-image: url(/images/WomenCare/horlicksWomenplus.webp)"></div>
+            <p> Horlicks Women's Chocolate Flavour Nutrition Powder </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 325 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box5">
-            <div class="box-img" style="background-image: url(/images/BabyCare/mamaearthSoap.webp)"></div>
-            <p> Mamaearth Milky Soft Babies Bodywash 0+Yrs 400Ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 404.1 </p>
+            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreeDrymax.webp)"></div>
+            <p> Stayfree Dry-Max All Night Ultra-Dry Pads </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 599 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box6">
-            <div class="box-img" style="background-image: url(/images/BabyCare/absorbDiapers.webp)"></div>
-            <p> Apollo Essentials Extra <br> Absorb Baby Diaper Pants </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 1079.1 </p>
+            <div class="box-img" style="background-image: url(/images/WomenCare/silktouchTampons.webp)"></div>
+            <p> SilkTouch Pro Comfort Tampons Super, 10 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 150 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box7">
-            <div class="box-img" style="background-image: url(/images/BabyCare/nestleCeralac.webp)"></div>
-            <p> Nestle Cerelac Baby Cereal with Milk Wheat Apple Cherry </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 310 </p>
+            <div class="box-img" style="background-image: url(/images/WomenCare/wowMom.webp)"></div>
+            <p> Wow Mom Vannila Flavour Pregnants Nutrition Powder </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 370 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box8">
-            <div class="box-img" id="image" style="background-image: url(/images/BabyCare/nestleCeregrow.webp)"></div>
-            <p> Mum’s Organic Baby Cereal with Ragi and Moong Dal </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 349 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/facialrazor.webp)"></div>
+            <p> Sirona Blink & Glow Facial Razor For Women, 3 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 206.3 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box9">
-            <div class="box-img" id="image" style="background-image: url(/images/BabyCare/enfamilPowder.webp)"></div>
-            <p> Enfamil A+ Follow Up Formula Stage 2 Powder, 400 gm </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 849 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/bombayShaving.webp)"></div>
+            <p> Bombay Shaving Shea Butter Hair Removal Cream </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 63.8 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box10">
-            <div class="box-img" id="image" style="background-image: url(/images/BabyCare/apollobabywipes.webp)"></div>
-            <p> Apollo Life Baby Wipes, 160 Count (2x80 Wipes) </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 252 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/GNCmultivitamin.webp)"></div>
+            <p> GNC Women's One Daily Multivitamin, 60 Tablets </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 884 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box11">
-            <div class="box-img" id="image" style="background-image: url(/images/BabyCare/allweknowshampoo.webp)"></div>
-            <p> Mothecare All We Know Baby Shampoo, 300 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 299 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/whisperultra.webp)"></div>
+            <p> Whisper Ultra Skin Love Soft Sanitary Pads XL+, 15 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 190 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box12">
-            <div class="box-img" id="image" style="background-image: url(/images/BabyCare/chicoshampoo.webp)"></div>
-            <p> Chicco Natural Sensation Bath Shampoo, 500 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 899 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/menstrualrelief.webp)"></div>
+            <p> Cannabliss Menstrual Pain Relief Oil, 10 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 629.1 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
