added skincare and healthcare categories

--- a/baby_care.html
+++ b/baby_care.html
@@ -45,19 +45,19 @@
                     <a href="#"> Buy Medicines <i class="fa-solid fa-caret-down"></i> </a>
                     <ul class="dropdown_menu">
                         <li><a href="baby_care.html">Baby Care</a></li>
-                        <li><a href="#">Women Care</a></li>
+                        <li><a href="women_care.html">Women Care</a></li>
                         <li class="hover-me">
-                            <a href="#">Personal Care <i class="fa-solid fa-caret-right"></i></a>
+                            <a href="personal_care.html">Personal Care <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu">
-                                <li><a href="#">Skin Care</a></li>
-                                <li><a href="#">Hair Care</a></li>
+                                <li><a href="skin_care.html">Skin Care</a></li>
+                                <li><a href="hair_care.html">Hair Care</a></li>
                             </ul>
                         </li>
                         <li class="hover-me">
                             <a href="#">Health Care <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu-2">
-                                <li><a href="#">Health Food</a></li>
-                                <li><a href="#">Healthy Snacks</a></li>
+                                <li><a href="nutrional_drinks.html">Nutritional Drinks</a></li>
+                                <li><a href="health_care.html">Health Devices</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Diabetic Care</a></li>
