--- a/health_devices.html
+++ b/health_devices.html
@@ -8,7 +8,7 @@
     <!--==Fav-icon=====================-->
     <link rel="shortcut icon" href="images/fav-icon.png">
     <!--==CSS==========================-->
-    <link rel="stylesheet" href="css/womencare.css">
+    <link rel="stylesheet" href="css/healthdevices.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -47,17 +47,17 @@
                         <li><a href="baby_care.html">Baby Care</a></li>
                         <li><a href="women_care.html">Women Care</a></li>
                         <li class="hover-me">
-                            <a href="#">Personal Care <i class="fa-solid fa-caret-right"></i></a>
+                            <a href="personal_care.html">Personal Care <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu">
-                                <li><a href="#">Skin Care</a></li>
-                                <li><a href="#">Hair Care</a></li>
+                                <li><a href="skin_care.html">Skin Care</a></li>
+                                <li><a href="hair_care.html">Hair Care</a></li>
                             </ul>
                         </li>
                         <li class="hover-me">
-                            <a href="#">Health Care <i class="fa-solid fa-caret-right"></i></a>
+                            <a href="health_care.html">Health Care <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu-2">
                                 <li><a href="nutrional_drinks.html">Nutritional Drinks</a></li>
-                                <li><a href="health_devices.html">Health Devices</a></li>
+                                <li><a href="#">Health Devices</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Diabetic Care</a></li>
@@ -79,99 +79,99 @@
         </nav><!--nav-end-->
     </section>
 
-    <div id="womenCareProducts">
+    <div id="healthCareProducts">
         <div class="box box1">
-            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreepads.webp)"></div>
-            <p> Stayfree Secure Pads with Wings XL, 20 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 116 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/bpmonitor.webp)"></div>
+            <p> Dr. Morepen BP One Blood Pressure Monitor BP-14 </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 837.1 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box2">
-            <div class="box-img" style="background-image: url(/images/WomenCare/vwashhygiene.webp)"></div>
-            <p> VWash Plus Expert Intimate Hygiene Wash, 100 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 180 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/glucosestrips.webp)"></div>
+            <p> Apollo Pharmacy Blood Glucose Test Strips, 50 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 719.1 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box3">
-            <div class="box-img" style="background-image: url(/images/WomenCare/apollopharmacykit.webp)"></div>
-            <p> Apollo Pharmacy LH Ovulation 5 Day Test Kit </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 427.5 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/coviself.webp)"></div>
+            <p> Mylab CoviSelf COVID-19 Rapid Antigen Self Test Kit </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 250 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box4">
-            <div class="box-img" style="background-image: url(/images/WomenCare/horlicksWomenplus.webp)"></div>
-            <p> Horlicks Women's Chocolate Flavour Nutrition Powder </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 325 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/thermometer.webp)"></div>
+            <p> Apollo Pharmacy Digital Thermometer, 1 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 99 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box5">
-            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreeDrymax.webp)"></div>
-            <p> Stayfree Dry-Max All Night Ultra-Dry Pads </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 599 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/pulseoximeter.webp)"></div>
+            <p> Trueview Finger Tip Pulse Oximeter i3 1, 1 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 750 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box6">
-            <div class="box-img" style="background-image: url(/images/WomenCare/silktouchTampons.webp)"></div>
-            <p> SilkTouch Pro Comfort Tampons Super, 10 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 150 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/PREg.webp)"></div>
+            <p> Prega News Advance Rapid Single-Step Pregnancy Test Kit </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 110 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box7">
-            <div class="box-img" style="background-image: url(/images/WomenCare/wowMom.webp)"></div>
-            <p> Wow Mom Vannila Flavour Pregnants Nutrition Powder </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 370 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/nebulizer.webp)"></div>
+            <p> ACCUMED Compressor Nebulizer BR-108, 1 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 1799 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box8">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/facialrazor.webp)"></div>
-            <p> Sirona Blink & Glow Facial Razor For Women, 3 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 206.3 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/HealthCare/wristbinder.webp)"></div>
+            <p> Apollo Pharmacy Wrist Binder With Thumb Support Universal </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 108 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box9">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/bombayShaving.webp)"></div>
-            <p> Bombay Shaving Shea Butter Hair Removal Cream </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 63.8 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/HealthCare/gloves.webp)"></div>
+            <p> Doctor's Choice Sterile Disposable Surgical Latex Gloves </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 59 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box10">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/GNCmultivitamin.webp)"></div>
-            <p> GNC Women's One Daily Multivitamin, 60 Tablets </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 884 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/HealthCare/neckpillow.webp)"></div>
+            <p> Apollo Pharmacy Travel Neck Pillow Universal </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 450 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box11">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/whisperultra.webp)"></div>
-            <p> Whisper Ultra Skin Love Soft Sanitary Pads XL+, 15 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 190 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/HealthCare/facemask.webp)"></div>
+            <p> Apollo Life 3 Ply Disposable Face Mask, 50 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 360 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box12">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/menstrualrelief.webp)"></div>
-            <p> Cannabliss Menstrual Pain Relief Oil, 10 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 629.1 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/HealthCare/sthethoscope.webp)"></div>
+            <p> Accusure Stethoscope ST-01, 1 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 278 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
