--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
                         <li class="hover-me">
                             <a href="personal_care.html">Personal Care <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu">
-                                <li><a href="#">Skin Care</a></li>
+                                <li><a href="skin_care.html">Skin Care</a></li>
                                 <li><a href="hair_care.html">Hair Care</a></li>
                             </ul>
                         </li>
                         <li class="hover-me">
-                            <a href="#">Health Care <i class="fa-solid fa-caret-right"></i></a>
+                            <a href="health_care.html">Health Care <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu-2">
-                                <li><a href="#">Health Food</a></li>
-                                <li><a href="#">Healthy Snacks</a></li>
+                                <li><a href="nutrional_drinks.html">Nutritional Drinks</a></li>
+                                <li><a href="health_devices.html">Health Devices</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Diabetic Care</a></li>
