--- a/nutrional_drinks.html
+++ b/nutrional_drinks.html
@@ -8,7 +8,7 @@
     <!--==Fav-icon=====================-->
     <link rel="shortcut icon" href="images/fav-icon.png">
     <!--==CSS==========================-->
-    <link rel="stylesheet" href="css/womencare.css">
+    <link rel="stylesheet" href="css/nutritionaldrinks.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -47,17 +47,17 @@
                         <li><a href="baby_care.html">Baby Care</a></li>
                         <li><a href="women_care.html">Women Care</a></li>
                         <li class="hover-me">
-                            <a href="#">Personal Care <i class="fa-solid fa-caret-right"></i></a>
+                            <a href="personal_care.html">Personal Care <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu">
-                                <li><a href="#">Skin Care</a></li>
-                                <li><a href="#">Hair Care</a></li>
+                                <li><a href="skin_care.html">Skin Care</a></li>
+                                <li><a href="hair_care.html">Hair Care</a></li>
                             </ul>
                         </li>
                         <li class="hover-me">
-                            <a href="#">Health Care <i class="fa-solid fa-caret-right"></i></a>
+                            <a href="health_care.html">Health Care <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu-2">
                                 <li><a href="nutrional_drinks.html">Nutritional Drinks</a></li>
-                                <li><a href="health_devices.html">Health Devices</a></li>
+                                <li><a href="#">Health Devices</a></li>
                             </ul>
                         </li>
                         <li><a href="#">Diabetic Care</a></li>
@@ -79,99 +79,99 @@
         </nav><!--nav-end-->
     </section>
 
-    <div id="womenCareProducts">
+    <div id="healthCareProducts">
         <div class="box box1">
-            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreepads.webp)"></div>
-            <p> Stayfree Secure Pads with Wings XL, 20 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 116 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/ensure.webp)"></div>
+            <p> Ensure Complete, Balanced Nutrition Powder 40gm </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 800 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box2">
-            <div class="box-img" style="background-image: url(/images/WomenCare/vwashhygiene.webp)"></div>
-            <p> VWash Plus Expert Intimate Hygiene Wash, 100 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 180 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/apollogreentea.webp)"></div>
+            <p> Apollo Life Pure Natural Green Tea Bags, 25 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 90 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box3">
-            <div class="box-img" style="background-image: url(/images/WomenCare/apollopharmacykit.webp)"></div>
-            <p> Apollo Pharmacy LH Ovulation 5 Day Test Kit </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 427.5 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/liptongreentea.webp)"></div>
+            <p> Lipton Honey Lemon Green <br> Tea Bags </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 170 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box4">
-            <div class="box-img" style="background-image: url(/images/WomenCare/horlicksWomenplus.webp)"></div>
-            <p> Horlicks Women's Chocolate Flavour Nutrition Powder </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 325 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/tulsi.webp)"></div>
+            <p> Lipton Tulsi Natura Green Tea Bags, 25 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 170 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box5">
-            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreeDrymax.webp)"></div>
-            <p> Stayfree Dry-Max All Night Ultra-Dry Pads </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 599 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/organic.webp)"></div>
+            <p> Organic India Tulsi Masala Chai Infusion Tea Bags </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 194 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box6">
-            <div class="box-img" style="background-image: url(/images/WomenCare/silktouchTampons.webp)"></div>
-            <p> SilkTouch Pro Comfort Tampons Super, 10 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 150 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/TYP0o.webp)"></div>
+            <p> Ty.phoo Cleansing Organic Root Remedy Tea Bags </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 189 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box7">
-            <div class="box-img" style="background-image: url(/images/WomenCare/wowMom.webp)"></div>
-            <p> Wow Mom Vannila Flavour Pregnants Nutrition Powder </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 370 </p>
+            <div class="box-img" style="background-image: url(/images/HealthCare/ors.webp)"></div>
+            <p> Prolyte ORS Lemon Flavour Energy Drink, 200 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 31.5 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box8">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/facialrazor.webp)"></div>
-            <p> Sirona Blink & Glow Facial Razor For Women, 3 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 206.3 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/HealthCare/pro.webp)"></div>
+            <p> Prolyte ORS Mixed Fruit Flavour Energy Drink, 200 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 31.5 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box9">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/bombayShaving.webp)"></div>
-            <p> Bombay Shaving Shea Butter Hair Removal Cream </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 63.8 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/HealthCare/gluconD.webp)"></div>
+            <p> Glucon-D Immunovolt Orange Flavour Energy Bites, 18 gm </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 10 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box10">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/GNCmultivitamin.webp)"></div>
-            <p> GNC Women's One Daily Multivitamin, 60 Tablets </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 884 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/HealthCare/nimbupani.webp)"></div>
+            <p> Glucon-D Instant Energy Nimbu Pani Flavour Powder </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 188.1 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box11">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/whisperultra.webp)"></div>
-            <p> Whisper Ultra Skin Love Soft Sanitary Pads XL+, 15 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 190 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/HealthCare/horlicks.webp)"></div>
+            <p> Junior Horlicks Chocolate Flavour Nutrition Powder </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 330 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box12">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/menstrualrelief.webp)"></div>
-            <p> Cannabliss Menstrual Pain Relief Oil, 10 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 629.1 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/HealthCare/bournvita.webp)"></div>
+            <p> Cadbury Bournvita Nutrition Powder, 200 gm Jar </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 128 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
