--- a/skin_care.html
+++ b/skin_care.html
@@ -8,7 +8,7 @@
     <!--==Fav-icon=====================-->
     <link rel="shortcut icon" href="images/fav-icon.png">
     <!--==CSS==========================-->
-    <link rel="stylesheet" href="css/womencare.css">
+    <link rel="stylesheet" href="css/skincare.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -47,10 +47,10 @@
                         <li><a href="baby_care.html">Baby Care</a></li>
                         <li><a href="women_care.html">Women Care</a></li>
                         <li class="hover-me">
-                            <a href="#">Personal Care <i class="fa-solid fa-caret-right"></i></a>
+                            <a href="personal_care.html">Personal Care <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu">
-                                <li><a href="#">Skin Care</a></li>
-                                <li><a href="#">Hair Care</a></li>
+                                <li><a href="skin_care.html">Skin Care</a></li>
+                                <li><a href="hair_care.html">Hair Care</a></li>
                             </ul>
                         </li>
                         <li class="hover-me">
@@ -79,99 +79,99 @@
         </nav><!--nav-end-->
     </section>
 
-    <div id="womenCareProducts">
+    <div id="skinCareProducts">
         <div class="box box1">
-            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreepads.webp)"></div>
-            <p> Stayfree Secure Pads with Wings XL, 20 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 116 </p>
+            <div class="box-img" style="background-image: url(/images/PersonalCare/niveaDeodrant.webp)"></div>
+            <p> Nivea Natural Glow Roll On Deodorant for Women </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 199.2 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box2">
-            <div class="box-img" style="background-image: url(/images/WomenCare/vwashhygiene.webp)"></div>
-            <p> VWash Plus Expert Intimate Hygiene Wash, 100 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 180 </p>
+            <div class="box-img" style="background-image: url(/images/PersonalCare/neutrogena.webp)"></div>
+            <p> Neutrogena Hydro Boost Hyaluronic Acid Water Gel </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 920 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box3">
-            <div class="box-img" style="background-image: url(/images/WomenCare/apollopharmacykit.webp)"></div>
-            <p> Apollo Pharmacy LH Ovulation 5 Day Test Kit </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 427.5 </p>
+            <div class="box-img" style="background-image: url(/images/PersonalCare/niveaLotion.webp)"></div>
+            <p> Nivea Body Milk Moisturising Lotion for Dry Skin </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 625 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box4">
-            <div class="box-img" style="background-image: url(/images/WomenCare/horlicksWomenplus.webp)"></div>
-            <p> Horlicks Women's Chocolate Flavour Nutrition Powder </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 325 </p>
+            <div class="box-img" style="background-image: url(/images/PersonalCare/facialOil.webp)"></div>
+            <p> Nivea Body Milk Moisturising Lotion for Dry Skin </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 679.5 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box5">
-            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreeDrymax.webp)"></div>
-            <p> Stayfree Dry-Max All Night Ultra-Dry Pads </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 599 </p>
+            <div class="box-img" style="background-image: url(/images/PersonalCare/cetaphilCleanser.webp)"></div>
+            <p> Cetaphil Brightness Reveal Creamy Cleanser, 100 gm </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 561 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box6">
-            <div class="box-img" style="background-image: url(/images/WomenCare/silktouchTampons.webp)"></div>
-            <p> SilkTouch Pro Comfort Tampons Super, 10 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 150 </p>
+            <div class="box-img" style="background-image: url(/images/PersonalCare/aveeno.webp)"></div>
+            <p> Aveeno Skin Relief Dry + Sensitive Moisturizing Lotion </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 1253.8 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box7">
-            <div class="box-img" style="background-image: url(/images/WomenCare/wowMom.webp)"></div>
-            <p> Wow Mom Vannila Flavour Pregnants Nutrition Powder </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 370 </p>
+            <div class="box-img" style="background-image: url(/images/PersonalCare/vaselineLotion.webp)"></div>
+            <p> Vaseline Gluta-Hya Flawless Glow Serum-in-Lotion </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 243.8 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box8">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/facialrazor.webp)"></div>
-            <p> Sirona Blink & Glow Facial Razor For Women, 3 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 206.3 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/PersonalCare/detolWipes.webp)"></div>
+            <p> Dettol Original Multi-Use <br> Skin & Surface Wipes </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 49 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box9">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/bombayShaving.webp)"></div>
-            <p> Bombay Shaving Shea Butter Hair Removal Cream </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 63.8 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/PersonalCare/scalpbrush.webp)"></div>
+            <p> FURR By Pee Safe Scalp Massager Brush, 1 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 179.1 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box10">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/GNCmultivitamin.webp)"></div>
-            <p> GNC Women's One Daily Multivitamin, 60 Tablets </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 884 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/PersonalCare/rashel.webp)"></div>
+            <p> Dr. Rashel Vitamin C Wet Wipes, 25 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 63.8 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box11">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/whisperultra.webp)"></div>
-            <p> Whisper Ultra Skin Love Soft Sanitary Pads XL+, 15 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 190 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/PersonalCare/sanitizer.webp)"></div>
+            <p> Apollo Life Hand Sanitizer,<br> 300 ml (3x100 ml) </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 135 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box12">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/menstrualrelief.webp)"></div>
-            <p> Cannabliss Menstrual Pain Relief Oil, 10 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 629.1 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/PersonalCare/handwash.webp)"></div>
+            <p> Chandrika Handwash, 430 ml (2 x 215 ml) </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 94 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
