completed the html and css pages

--- a/health_devices.html
+++ b/health_devices.html
@@ -65,7 +65,7 @@
                             <a href="#">Day to Day Diseases <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu-1">
                                 <li><a href="#">Cold and cough</a></li>
-                                <li><a href="#">Headache</a></li>
+                                <li><a href="#">Pain Relief</a></li>
                             </ul>
                         </li>
                     </ul>
