--- a/baby_care.html
+++ b/baby_care.html
@@ -54,18 +54,18 @@
                             </ul>
                         </li>
                         <li class="hover-me">
-                            <a href="#">Health Care <i class="fa-solid fa-caret-right"></i></a>
+                            <a href="health_care.html">Health Care <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu-2">
                                 <li><a href="nutrional_drinks.html">Nutritional Drinks</a></li>
                                 <li><a href="health_care.html">Health Devices</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Diabetic Care</a></li>
+                        <li><a href="diabetic_care.html">Diabetic Care</a></li>
                         <li class="hover-me">
                             <a href="#">Day to Day Diseases <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu-1">
                                 <li><a href="#">Cold and cough</a></li>
-                                <li><a href="#">Headache</a></li>
+                                <li><a href="#">Pain Relief</a></li>
                             </ul>
                         </li>
                     </ul>
