--- a/coldcough.html
+++ b/coldcough.html
@@ -8,7 +8,7 @@
     <!--==Fav-icon=====================-->
     <link rel="shortcut icon" href="images/fav-icon.png">
     <!--==CSS==========================-->
-    <link rel="stylesheet" href="css/womencare.css">
+    <link rel="stylesheet" href="css/coldcough.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -56,7 +56,7 @@
                         <li class="hover-me">
                             <a href="health_care.html">Health Care <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu-2">
-                                <li><a href="nutrional_drinks.html">Nutritional Drinks</a></li>
+                                <li><a href="nutrional_drinks.html">Nutrional Drinks</a></li>
                                 <li><a href="health_devices.html">Health Devices</a></li>
                             </ul>
                         </li>
@@ -79,99 +79,99 @@
         </nav><!--nav-end-->
     </section>
 
-    <div id="womenCareProducts">
+    <div id="personalCareProducts">
         <div class="box box1">
-            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreepads.webp)"></div>
-            <p> Stayfree Secure Pads with Wings XL, 20 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 116 </p>
+            <div class="box-img" style="background-image: url(/images/ColdCough/cough_drops.webp)"></div>
+            <p> Apollo Life Cough Drops Lozenges, 25 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 25 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box2">
-            <div class="box-img" style="background-image: url(/images/WomenCare/vwashhygiene.webp)"></div>
-            <p> VWash Plus Expert Intimate Hygiene Wash, 100 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 180 </p>
+            <div class="box-img" style="background-image: url(/images/ColdCough/coughSyrup.webp)"></div>
+            <p> Apollo Life Cough Syrup, 100 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 100 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box3">
-            <div class="box-img" style="background-image: url(/images/WomenCare/apollopharmacykit.webp)"></div>
-            <p> Apollo Pharmacy LH Ovulation 5 Day Test Kit </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 427.5 </p>
+            <div class="box-img" style="background-image: url(/images/ColdCough/ayursorepills.webp)"></div>
+            <p> Apollo Pharmacy Ayurvedic Sorepils, 200 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 360 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box4">
-            <div class="box-img" style="background-image: url(/images/WomenCare/horlicksWomenplus.webp)"></div>
-            <p> Horlicks Women's Chocolate Flavour Nutrition Powder </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 325 </p>
+            <div class="box-img" style="background-image: url(/images/ColdCough/tulsidrops.webp)"></div>
+            <p> Apollo Pharmacy Panch Tulsi Drops, 20 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 180 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box5">
-            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreeDrymax.webp)"></div>
-            <p> Stayfree Dry-Max All Night Ultra-Dry Pads </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 599 </p>
+            <div class="box-img" style="background-image: url(/images/ColdCough/cofsils.webp)"></div>
+            <p> Cipla Cofsils Experdine Gargle, 100 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 170 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box6">
-            <div class="box-img" style="background-image: url(/images/WomenCare/silktouchTampons.webp)"></div>
-            <p> SilkTouch Pro Comfort Tampons Super, 10 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 150 </p>
+            <div class="box-img" style="background-image: url(/images/ColdCough/colsilmint.webp)"></div>
+            <p> Cofsils Fresh Mint Flavour, 10 Lozenges </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 35 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box7">
-            <div class="box-img" style="background-image: url(/images/WomenCare/wowMom.webp)"></div>
-            <p> Wow Mom Vannila Flavour Pregnants Nutrition Powder </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 370 </p>
+            <div class="box-img" style="background-image: url(/images/ColdCough/nasalspray.webp)"></div>
+            <p> Nasoclear Saline Nasal Spray, 20 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 64 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box8">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/facialrazor.webp)"></div>
-            <p> Sirona Blink & Glow Facial Razor For Women, 3 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 206.3 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/ColdCough/dabur.webp)"></div>
+            <p> Dabur Honitus Herbal Cough Remedy Syrup, 100 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 90 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box9">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/bombayShaving.webp)"></div>
-            <p> Bombay Shaving Shea Butter Hair Removal Cream </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 63.8 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/ColdCough/steam.webp)"></div>
+            <p> Apollo Pharmacy Steam Inhaler Vaporizer, 1 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 360 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box10">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/GNCmultivitamin.webp)"></div>
-            <p> GNC Women's One Daily Multivitamin, 60 Tablets </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 884 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/ColdCough/vicks.webp)"></div>
+            <p> Vicks Cough Drops Menthol Lozenges, 25 count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 25 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box11">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/whisperultra.webp)"></div>
-            <p> Whisper Ultra Skin Love Soft Sanitary Pads XL+, 15 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 190 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/ColdCough/inhaler.webp)"></div>
+            <p> Vicks Roll-On Inhaler 2-In-1 Relief, 1.5 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 100 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box12">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/menstrualrelief.webp)"></div>
-            <p> Cannabliss Menstrual Pain Relief Oil, 10 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 629.1 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/ColdCough/multani.webp)"></div>
+            <p> Multani Kuka Cough Syrup, 100 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 118 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
