--- a/diabetic_care.html
+++ b/diabetic_care.html
@@ -8,7 +8,7 @@
     <!--==Fav-icon=====================-->
     <link rel="shortcut icon" href="images/fav-icon.png">
     <!--==CSS==========================-->
-    <link rel="stylesheet" href="css/womencare.css">
+    <link rel="stylesheet" href="css/diabeticcare.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -79,99 +79,99 @@
         </nav><!--nav-end-->
     </section>
 
-    <div id="womenCareProducts">
+    <div id="diabeticCareProducts">
         <div class="box box1">
-            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreepads.webp)"></div>
-            <p> Stayfree Secure Pads with Wings XL, 20 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 116 </p>
+            <div class="box-img" style="background-image: url(/images/DiabeticCare/diabeticmeter.webp)"></div>
+            <p> Apollo Pharmacy Smart Blood Glucose Monitoring </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 719.1 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box2">
-            <div class="box-img" style="background-image: url(/images/WomenCare/vwashhygiene.webp)"></div>
-            <p> VWash Plus Expert Intimate Hygiene Wash, 100 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 180 </p>
+            <div class="box-img" style="background-image: url(/images/DiabeticCare/diabetesPlus.webp)"></div>
+            <p> Horlicks Diabetes Plus Vanilla Flavour Nutrition Powder </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 710 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box3">
-            <div class="box-img" style="background-image: url(/images/WomenCare/apollopharmacykit.webp)"></div>
-            <p> Apollo Pharmacy LH Ovulation 5 Day Test Kit </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 427.5 </p>
+            <div class="box-img" style="background-image: url(/images/DiabeticCare/accucheck.webp)"></div>
+            <p> Accu-Chek Active Test Strips, 50 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 1086 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box4">
-            <div class="box-img" style="background-image: url(/images/WomenCare/horlicksWomenplus.webp)"></div>
-            <p> Horlicks Women's Chocolate Flavour Nutrition Powder </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 325 </p>
+            <div class="box-img" style="background-image: url(/images/DiabeticCare/pentasure.webp)"></div>
+            <p> PentaSure DM Diabetes Care Creamy Vanilla Powder </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 2368.1 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box5">
-            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreeDrymax.webp)"></div>
-            <p> Stayfree Dry-Max All Night Ultra-Dry Pads </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 599 </p>
+            <div class="box-img" style="background-image: url(/images/DiabeticCare/karelajamun.webp)"></div>
+            <p> Apollo Life Karela Jamun Plus Juice, 500 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 161.1 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box6">
-            <div class="box-img" style="background-image: url(/images/WomenCare/silktouchTampons.webp)"></div>
-            <p> SilkTouch Pro Comfort Tampons Super, 10 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 150 </p>
+            <div class="box-img" style="background-image: url(/images/DiabeticCare/applecider.webp)"></div>
+            <p> Apollo Life Apple Cider Vinegar Juice, 500 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 324 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box7">
-            <div class="box-img" style="background-image: url(/images/WomenCare/wowMom.webp)"></div>
-            <p> Wow Mom Vannila Flavour Pregnants Nutrition Powder </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 370 </p>
+            <div class="box-img" style="background-image: url(/images/DiabeticCare/metabolic.webp)"></div>
+            <p> Himalaya Karela Metabolic Wellness, 60 Tablets </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 240 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box8">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/facialrazor.webp)"></div>
-            <p> Sirona Blink & Glow Facial Razor For Women, 3 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 206.3 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/DiabeticCare/karelaamla.webp)"></div>
+            <p> Patanjali Karela Amla Juice, 500 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 70 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box9">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/bombayShaving.webp)"></div>
-            <p> Bombay Shaving Shea Butter Hair Removal Cream </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 63.8 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/DiabeticCare/flowerpowder.webp)"></div>
+            <p> Annai Avaram Flower Powder, 50 gm </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 420 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box10">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/GNCmultivitamin.webp)"></div>
-            <p> GNC Women's One Daily Multivitamin, 60 Tablets </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 884 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/DiabeticCare/sugarfree.webp)"></div>
+            <p> Sugar Free Green Stevia Low Calorie Sweetener Powder </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 220 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box11">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/whisperultra.webp)"></div>
-            <p> Whisper Ultra Skin Love Soft Sanitary Pads XL+, 15 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 190 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/DiabeticCare/nestle.webp)"></div>
+            <p> Nestle Resource Diabetic Vanilla Flavour Powder </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 814 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box12">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/menstrualrelief.webp)"></div>
-            <p> Cannabliss Menstrual Pain Relief Oil, 10 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 629.1 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/DiabeticCare/dprotein.webp)"></div>
+            <p> D Protin Vanilla Flavour Powder, 500 gm </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 611.1 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
