--- a/painrelief.html
+++ b/painrelief.html
@@ -8,7 +8,7 @@
     <!--==Fav-icon=====================-->
     <link rel="shortcut icon" href="images/fav-icon.png">
     <!--==CSS==========================-->
-    <link rel="stylesheet" href="css/womencare.css">
+    <link rel="stylesheet" href="css/painrelief.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -56,7 +56,7 @@
                         <li class="hover-me">
                             <a href="health_care.html">Health Care <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu-2">
-                                <li><a href="nutrional_drinks.html">Nutritional Drinks</a></li>
+                                <li><a href="nutrional_drinks.html">Nutrional Drinks</a></li>
                                 <li><a href="health_devices.html">Health Devices</a></li>
                             </ul>
                         </li>
@@ -79,99 +79,99 @@
         </nav><!--nav-end-->
     </section>
 
-    <div id="womenCareProducts">
+    <div id="personalCareProducts">
         <div class="box box1">
-            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreepads.webp)"></div>
-            <p> Stayfree Secure Pads with Wings XL, 20 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 116 </p>
+            <div class="box-img" style="background-image: url(/images/PainRelief/spray.webp)"></div>
+            <p> Apollo Pharmacy Pain Relief Spray, 50 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 85.50 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box2">
-            <div class="box-img" style="background-image: url(/images/WomenCare/vwashhygiene.webp)"></div>
-            <p> VWash Plus Expert Intimate Hygiene Wash, 100 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 180 </p>
+            <div class="box-img" style="background-image: url(/images/PainRelief/pack.webp)"></div>
+            <p> Doctor's Choice Hot & Cold Gel Pack Medium, 1 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 214 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box3">
-            <div class="box-img" style="background-image: url(/images/WomenCare/apollopharmacykit.webp)"></div>
-            <p> Apollo Pharmacy LH Ovulation 5 Day Test Kit </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 427.5 </p>
+            <div class="box-img" style="background-image: url(/images/PainRelief/oil.webp)"></div>
+            <p> Apollo Pharmacy Pain Relief Oil, 60 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 108 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box4">
-            <div class="box-img" style="background-image: url(/images/WomenCare/horlicksWomenplus.webp)"></div>
-            <p> Horlicks Women's Chocolate Flavour Nutrition Powder </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 325 </p>
+            <div class="box-img" style="background-image: url(/images/PainRelief/gel.webp)"></div>
+            <p> Apollo Pharmacy Pain Relief Gel, 30 gm </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 76.5 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box5">
-            <div class="box-img" style="background-image: url(/images/WomenCare/stayfreeDrymax.webp)"></div>
-            <p> Stayfree Dry-Max All Night Ultra-Dry Pads </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 599 </p>
+            <div class="box-img" style="background-image: url(/images/PainRelief/heatpad.webp)"></div>
+            <p> Apollo Pharmacy Orthopaedic Heat Pad, 1 Count </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 899.1 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box6">
-            <div class="box-img" style="background-image: url(/images/WomenCare/silktouchTampons.webp)"></div>
-            <p> SilkTouch Pro Comfort Tampons Super, 10 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 150 </p>
+            <div class="box-img" style="background-image: url(/images/PainRelief/rollon.webp)"></div>
+            <p> Apollo Pharmacy Pain Relief Roll On, 50 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 90 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box7">
-            <div class="box-img" style="background-image: url(/images/WomenCare/wowMom.webp)"></div>
-            <p> Wow Mom Vannila Flavour Pregnants Nutrition Powder </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 370 </p>
+            <div class="box-img" style="background-image: url(/images/PainRelief/backpainrollon.webp)"></div>
+            <p> Amrutanjan Advanced Back Pain Roll-on, 50 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 100 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box8">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/facialrazor.webp)"></div>
-            <p> Sirona Blink & Glow Facial Razor For Women, 3 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 206.3 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/PainRelief/balm.webp)"></div>
+            <p> Amrutanjan Strong Double Power Pain Balm, 8 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 44 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box9">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/bombayShaving.webp)"></div>
-            <p> Bombay Shaving Shea Butter Hair Removal Cream </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 63.8 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/PainRelief/moov.webp)"></div>
+            <p> Moov Pain Relief Spray, 55 gm </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 199 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box10">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/GNCmultivitamin.webp)"></div>
-            <p> GNC Women's One Daily Multivitamin, 60 Tablets </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 884 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/PainRelief/amrutanjan.webp)"></div>
+            <p> Amrutanjan Extra Power Pain Balm, 50 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 124.6 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box11">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/whisperultra.webp)"></div>
-            <p> Whisper Ultra Skin Love Soft Sanitary Pads XL+, 15 Count </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 190 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/PainRelief/tigerbalm.webp)"></div>
+            <p> Tiger Balm Red Ointement, 21 ml </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 93 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
         </div>
         <div class="box box12">
-            <div class="box-img" id="image" style="background-image: url(/images/WomenCare/menstrualrelief.webp)"></div>
-            <p> Cannabliss Menstrual Pain Relief Oil, 10 ml </p>
-            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 629.1 </p>
+            <div class="box-img" id="image" style="background-image: url(/images/PainRelief/ointment.webp)"></div>
+            <p> Apollo Pharmacy Povidone-Iodine Ointment USP, 20 gm </p>
+            <p class="item-price"> <i class="fa-solid fa-indian-rupee-sign"></i> 38 </p>
             <button class="add-to-cart-button">
                 Add to Cart
             </button>
