--- a/personal_care.html
+++ b/personal_care.html
@@ -60,12 +60,12 @@
                                 <li><a href="health_devices.html">Health Devices</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Diabetic Care</a></li>
+                        <li><a href="diabetic_care.html">Diabetic Care</a></li>
                         <li class="hover-me">
                             <a href="#">Day to Day Diseases <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-menu-1">
-                                <li><a href="#">Cold and cough</a></li>
-                                <li><a href="#">Headache</a></li>
+                                <li><a href="coldcough.html">Cold and cough</a></li>
+                                <li><a href="painrelief.html">Pain Relief</a></li>
                             </ul>
                         </li>
                     </ul>
