--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
                 <li>
                     <a href="signin.html">Sign In</a>
                 </li>
+                <div class="nav-cart border">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <a href="cart.html">Cart</a>
+                </div>
             </ul>
             <!--**contact*******-->
             <a href="#" class="nav-appointment-btn">Appointment</a>
@@ -86,9 +90,8 @@
         <div class="hero-content">
             <!--**text****************-->
             <div class="hero-text">
-                <h1>Feel Better About Finding HealthCare</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id, vitae ex! Fuga similique repudiandae
-                    molestiae libero.</p>
+                <h1>Helping you to bring back your HAPPY SMILE</h1>
+                <p>Feel Better About Finding HealthCare</p>
                 <!--btns-->
                 <div class="hero-text-btns">
                     <a href="#"><i class="fa-solid fa-magnifying-glass"></i> Find Doctor's</a>
@@ -139,7 +142,7 @@
             <!--text-->
             <div class="w-info-text">
                 <strong>Specialised Service</strong>
-                <p>Lorem ipsum dolor sit </p>
+                <p>Get service from professional Doctors </p>
             </div>
         </div>
         <!--**box2***********-->
@@ -151,7 +154,7 @@
             <!--text-->
             <div class="w-info-text">
                 <strong>24/7 Advanced Care</strong>
-                <p>Lorem ipsum dolor sit </p>
+                <p>Providing unwavering support 24/7 </p>
             </div>
         </div>
         <!--**box3***********-->
@@ -163,7 +166,7 @@
             <!--text-->
             <div class="w-info-text">
                 <strong>Get Result Online</strong>
-                <p>Lorem ipsum dolor sit </p>
+                <p>Ask a Doctor </p>
             </div>
         </div>
 
@@ -185,11 +188,9 @@
         <!--**text**-->
         <div class="our-stroy-text">
             <h2>Short Story About Our Clinic.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae quae ad aliquid in porro. Harum ipsa
-                debitis deserunt ad facilis maxime! Accusantium ratione vitae quae repellendus, dolor debitis minima
-                maiores.</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab accusamus explicabo alias magni mollitia ea
-                excepturi! Aliquam temporibus <a>Read More</a></p>
+            <p>Our clinic was founded over three decades ago by Dr. Sarah Thompson, a passionate physician dedicated to providing quality healthcare to our community. Dr. Thompson started with a small practice and a big dream: to create a place where patients feel valued, heard, and cared for. </p>
+            <p>Today, our clinic has grown into a state-of-the-art facility, but our mission remains the same. 
+                We continue to uphold Dr. Thompson’s legacy by putting our patients first and treating them like family.<a>Read More</a></p>
             <!--numbers-of-happy-patients-->
             <div class="story-numbers-container">
                 <!--box-->
@@ -249,8 +250,7 @@
                             <!--title-->
                             <strong>Dental Care</strong>
                             <!--details-->
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem ullam perspiciatis
-                                impedit consequuntur</p>
+                            <p>Oral health services to keep your smile bright and healthy</p>
                             <!--read more-->
                             <a href="#">Read More</a>
                         </div>
@@ -264,8 +264,7 @@
                             <!--title-->
                             <strong>Eye Care</strong>
                             <!--details-->
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem ullam perspiciatis
-                                impedit consequuntur</p>
+                            <p>Exceptional care to help you see the world more vividly and comfortably</p>
                             <!--read more-->
                             <a href="#">Read More</a>
                         </div>
@@ -279,8 +278,7 @@
                             <!--title-->
                             <strong>Skin Care</strong>
                             <!--details-->
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem ullam perspiciatis
-                                impedit consequuntur</p>
+                            <p>Personalized treatments to help you achieve radiant, healthy skin.</p>
                             <!--read more-->
                             <a href="#">Read More</a>
                         </div>
@@ -294,8 +292,7 @@
                             <!--title-->
                             <strong>Surgical</strong>
                             <!--details-->
-                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem ullam perspiciatis
-                                impedit consequuntur</p>
+                            <p>Providing precise, compassionate care, ensuring our patients receive the best possible outcomes</p>
                             <!--read more-->
                             <a href="#">Read More</a>
                         </div>
@@ -326,7 +323,7 @@
                     <!--text-->
                     <div class="why-choose-box-text">
                         <strong>Advance Care</strong>
-                        <p>Lorem ipsum dolor sit</p>
+                        <p>Consult doctor from home</p>
                     </div>
                 </div>
                 <!--**box**-->
@@ -336,7 +333,7 @@
                     <!--text-->
                     <div class="why-choose-box-text">
                         <strong>Online Medicine</strong>
-                        <p>Lorem ipsum dolor sit</p>
+                        <p>Buy Medicine without stepping out</p>
                     </div>
                 </div>
                 <!--**box**-->
@@ -346,7 +343,7 @@
                     <!--text-->
                     <div class="why-choose-box-text">
                         <strong>Medical & Surgical</strong>
-                        <p>Lorem ipsum dolor sit</p>
+                        <p>Professional</p>
                     </div>
                 </div>
                 <!--**box**-->
@@ -356,7 +353,7 @@
                     <!--text-->
                     <div class="why-choose-box-text">
                         <strong>Lab Test's</strong>
-                        <p>Lorem ipsum dolor sit</p>
+                        <p>Take your Lab Test</p>
                     </div>
                 </div>
             </div>
@@ -369,8 +366,7 @@
             <h3>Emergency?<br />
                 Contact Us
             </h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis iste, quam ratione rerum aliquid esse
-                vero placeat? debitis velit cupiditate magni cumque corporis.</p>
+            <p>In case of a medical emergency, your health and safety are our top priorities. Please contact us immediately for urgent assistance.</p>
             <!--==container====-->
             <div class="w-right-contact-container">
                 <!--**box**-->
@@ -404,7 +400,7 @@
         <!--**heading*****************-->
         <div class="our-team-heading">
             <h3>Meet Our Specialist</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>Each member of our team brings a wealth of experience and a deep commitment to patient health and well-being</p>
         </div>
 
         <!--**team-container***********-->
@@ -505,8 +501,7 @@
         <!--**heading****************-->
         <div class="testimonials-heading">
             <h3>Our Patients FeedBack About Us</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptates cupiditate, rerum rem odio
-                fugit</p>
+            <p>We are proud to share the positive experiences of our patients, as their feedback is a testament to our commitment to providing exceptional care. Here’s what some of our patients have to say about their time with us:</p>
         </div>
 
 
@@ -536,8 +531,8 @@
                                     </div>
                                     <!--text-->
                                     <div class="t-profile-text">
-                                        <strong>Client Name</strong>
-                                        <span>From China</span>
+                                        <strong>John M.</strong>
+                                        <span>From Mumbai</span>
                                         <div class="t-rating">
                                             <i class="fa-solid fa-star"></i>
                                             <i class="fa-solid fa-star"></i>
@@ -548,9 +543,7 @@
                                     </div>
                                 </div>
                                 <!--feedback-->
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa est odit dicta sequi
-                                    labore perferendis ut veritatis expedita, nihil sint! Delectus aut id voluptatibus
-                                    nemo dolorum, quos consequatur commodi repudiandae?</p>
+                                <p>"I have been coming to this clinic for years, and I can confidently say that the care I receive here is unparalleled. The doctors are incredibly knowledgeable, and the staff is always welcoming and helpful. I wouldn't trust my health to anyone else."</p>
                             </div><!--box-end-->
                         </div><!--slide-end-->
 
@@ -566,8 +559,8 @@
                                     </div>
                                     <!--text-->
                                     <div class="t-profile-text">
-                                        <strong>Client Name</strong>
-                                        <span>From China</span>
+                                        <strong>Marie</strong>
+                                        <span>From Karnataka</span>
                                         <div class="t-rating">
                                             <i class="fa-solid fa-star"></i>
                                             <i class="fa-solid fa-star"></i>
@@ -578,9 +571,7 @@
                                     </div>
                                 </div>
                                 <!--feedback-->
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa est odit dicta sequi
-                                    labore perferendis ut veritatis expedita, nihil sint! Delectus aut id voluptatibus
-                                    nemo dolorum, quos consequatur commodi repudiandae?</p>
+                                <p>"As a mother of two, I can't thank Dr. Emily Carter enough for the wonderful care she provides my children. She is patient, understanding, and always takes the time to address all my concerns. My kids love her!"</p>
                             </div><!--box-end-->
                         </div><!--slide-end-->
 
@@ -596,8 +587,8 @@
                                     </div>
                                     <!--text-->
                                     <div class="t-profile-text">
-                                        <strong>Client Name</strong>
-                                        <span>From China</span>
+                                        <strong>Hardy S</strong>
+                                        <span>From Kerala</span>
                                         <div class="t-rating">
                                             <i class="fa-solid fa-star"></i>
                                             <i class="fa-solid fa-star"></i>
@@ -608,9 +599,7 @@
                                     </div>
                                 </div>
                                 <!--feedback-->
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa est odit dicta sequi
-                                    labore perferendis ut veritatis expedita, nihil sint! Delectus aut id voluptatibus
-                                    nemo dolorum, quos consequatur commodi repudiandae?</p>
+                                <p>"The team at this clinic is amazing. From the moment I walk in, I feel like I'm part of a family. Dr. Sarah Thompson has been my physician for over a decade, and her dedication to her patients is truly inspiring."</p>
                             </div><!--box-end-->
                         </div><!--slide-end-->
 
@@ -644,7 +633,7 @@
                 <!--logo-->
                 <a href="#" class="logo"><span>We</span>Care</a>
                 <!--details-->
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi quas neque repudiandae nihil.</p>
+                <p>Thank you to all our patients for your trust and kind words. We look forward to continuing to serve you with excellence and compassion. Do follow us on below socials.</p>
                 <!--social-box-->
                 <div class="footer-social">
                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
