--- a/painrelief.html
+++ b/painrelief.html
@@ -73,6 +73,10 @@
                 <li>
                     <a href="signin.html">Sign In</a>
                 </li>
+                <div class="nav-cart border">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <a href="cart.html">Cart</a>
+                </div>
             </ul>
             <!--**contact*******-->
             <a href="#" class="nav-appointment-btn">Appointment</a>
